Fix spacing in the action div

--- a/style.css
+++ b/style.css
@@ -184,9 +184,10 @@ gap: 30px;
 .left-text {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
-.left-text h4 {
+.left-text h3 {
     color: #F9FAF8;
     margin: 0;
 }
@@ -194,6 +195,7 @@ gap: 30px;
 .left-text p {
     color: #E5E7EB;
     font-size: 18px;
+    margin: 0;
 }
 
 .action2 button {
@@ -205,11 +207,10 @@ gap: 30px;
 
     }
 
-/* button:hover { */
-    /* color: aqua; */
-    /* cursor: pointer; */
+button:hover { 
+    cursor: pointer;
+    } 
     
-/* } */
 /* Call to Action */
 
 
